--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -35,4 +35,8 @@ jobs:
       - name: Build page
         run: yarn build
       - name: Deploy Now
-        run: ./node_modules/.bin/vercel build --scope=tcalopes19-gmailcom --name=search-gifs --token=${{ secrets.VERCEL_TOKEN }} --prod --confirm
+        run: npx vercel --token ${VERCEL_TOKEN} --prod --confirm
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
