--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -38,5 +38,5 @@ jobs:
         run: npx vercel --token ${VERCEL_TOKEN} --prod --confirm
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
