--- a/.github/workflows/release_staging.yml
+++ b/.github/workflows/release_staging.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build page
         run: yarn build:develop
       - name: Deploy Now
-        run: npx vercel --token ${VERCEL_TOKEN} --prod --confirm
+        run: npx vercel build --token ${VERCEL_TOKEN} --prod --confirm
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TEAM_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_TEAM_PROJECT_ID_STAGING }}
