--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
+    "@types/react-datepicker": "^4.4.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
